--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 Index.html
 <!DOCTYPE html>
+<html>
+<body>
 
 <h2>My Profile</h2>
 <h3>Personal Information</h3>
@@ -73,3 +75,7 @@ Index.html
 <p>Learning Styles Quiz' 2020, viewed September 20, 2020, from <a href="http://www.emtrain.eu/learning-styles/"> Learning Styles </a> <P>
 
 <p>Results of the Nerdy Personality Attributes Scale' 2020, viewed September 20, 2020, from <a href="https://openpsychometrics.org/tests/NPAS/results.php?s=56&f=22,18,20,7,9"> Nerdy Test </a> <p>
+
+  </body>
+  </html>
+  
